2009-04-12  Nicolas François  <nicolas.francois@centraliens.net>

	* man/passwd.1.xml: Document that passwd uses PAM to authenticate
	and change passwords on PAM-enabled builds.

2009-04-12  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Add more information to the mkdir and chown
	failure messages.

2009-04-12  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Updated some login.defs entries. Thanks to
	Belkacem Abbas.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/MAX_MEMBERS_PER_GROUP.xml,
	man/login.defs.d/CONSOLE_GROUPS.xml: Fix typos.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/es/Makefile.am: Disable the distribution of Spanish
	manpages. They are outdated. Please contact
	pkg-shadow-devel@lists.alioth.debian.org if you wish to provide
	updates.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c, src/useraddd.c: Fix the usage string so that it
	does not change depending on the configure option. Use a format.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Fix the usage of the unused macro.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/age.c, src/expiry.c, src/login.c: A
	shadow entry is now sufficient for agecheck. Remove the first
	passwd entry parameter.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c, src/usermod.c: Only call selinux_update_mapping()
	if Zflg is set.
	* src/userdel.c: Rename argv to args to avoid nameclash with the
	main() parameters.

2009-04-11  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getgr_nam_gid.c: Added support for NULL argument.
	* libmisc/chowntty.c: Reuse getgr_nam_gid(), and get rid of atol().

2009-04-11  Peter Vrabec  <pvrabec@redhat.com>

	* libmisc/find_new_gid.c, libmisc/find_new_uid.c: For system